# book-scents

./: .gitignore  README.md
backend/: .env  Dockerfile  README.md  app.py  db_init.py  docker-compose.yml  generate_test_data.py  pyproject.toml  test_connection.py
backend/static/: book-scents.openapi.json
webfront/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
webfront/public/bookdetail/: code.html
webfront/public/booklist/: code.html
webfront/public/homepage/: code.html
webfront/public/login/: code.html
webfront/public/profile/: code.html
webfront/public/register/: code.html
webfront/public/reset/: code.html
webfront/public/upload/: code.html
webfront/src/: App.vue  main.ts
webfront/src/apis/: index.ts
webfront/src/assets/: var.css
webfront/src/components/: PageLayout.vue
webfront/src/dts/: components.d.ts
webfront/src/router/: index.ts
webfront/src/stores/: user.ts
webfront/src/types/: book.d.ts  global.d.ts  recommend.d.ts  user.d.ts
webfront/src/utils/: http.ts
webfront/src/views/book-detail/: BookDetail.vue
webfront/src/views/book-detail/components/: CreateRecommend.vue
webfront/src/views/book-list/: BookList.vue
webfront/src/views/book-upload/: BookUpload.vue
webfront/src/views/home-page/: HomePage.vue
webfront/src/views/profile/: UserLogin.vue  UserProfile.vue  UserRegister.vue
